Fix long text bleeding out of .issue

--- a/app/assets/stylesheets/buckets.css.scss
+++ b/app/assets/stylesheets/buckets.css.scss
@@ -44,6 +44,7 @@
   border: 1px solid transparent;
   border-radius: 3px;
   background-color: #f6f6f6;
+  word-break: break-word;
 
   &, .panel-heading {
     box-shadow: none !important;
